fix:naming endpoint swagger
